--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,20 @@ services:
       - ./pokemon_app:/pokemon_app
 
     command: python manage.py runserver 0.0.0.0:8000
+
+  redis:
+    image: redis:7.0.5-alpine
+    hostname: redis
+
+  worker:
+    build:
+      context: .
+    hostname: worker
+    entrypoint: celery
+    command: -A pokemon_app.celery_app.app worker --loglevel=info
+    volumes:
+      - ./pokemon_app:/pokemon_app
+    links:
+      - redis
+    depends_on:
+      - redis
