--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,13 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.3
 Django==4.2.3
+django-celery-beat==2.5.0
+django-timezone-field==6.1.0
 kombu==5.3.5
 prompt-toolkit==3.0.43
+python-crontab==3.0.0
 python-dateutil==2.9.0
 redis==5.0.2
 six==1.16.0
