--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,22 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+crispy-tailwind==1.0.3
 cron-descriptor==1.4.3
 Django==4.2.3
 django-celery-beat==2.5.0
+django-cors-headers==4.3.1
+django-crispy-forms==2.1
+django-filter==23.5
 django-timezone-field==6.1.0
+djangorestframework==3.14.0
 kombu==5.3.5
+Markdown==3.5.2
+pillow==10.2.0
 prompt-toolkit==3.0.43
 python-crontab==3.0.0
 python-dateutil==2.9.0
+pytz==2024.1
 redis==5.0.2
 six==1.16.0
 sqlparse==0.4.4
